tests/error/function/unit.mml
let f () = 3 in f 3
